[news] Fixed horizontal scrolling in Safari

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,11 @@ body {
   word-wrap: break-word;
 }
 
+code, a {
+  // Prevents horizontal scrolling in Safari on narrow screen for long links and code lines.
+  word-wrap: anywhere;
+}
+
 // Top menu.
 header {
   text-align: center;
